# under_turing

./: CMakeLists.txt  CMakeLists.txt.rej  README.md  encoding_diary.h
include/: List_node_page_data_structure.h  init_globle_variable.h
src/: BGM.cpp  BGM.cpp.rej  CMakeLists.txt  CMakeLists.txt.rej  Draw.cpp  Draw.cpp.rej  Final_game.cpp  If_new_page.cpp  Key_control.cpp  List_node_page_data_structure.cpp  init_global_variable.cpp  meet.cpp  meet.cpp.rej
turing/: main.cpp
